--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,16 @@ body {
     flex-direction: column; /* Organise les éléments verticalement */
     min-height: 100vh; /* Hauteur minimale de la page = 100% de la fenêtre */
     margin: 0; /* Supprime les marges par défaut */
+    padding: 0;
+    background: url("../img/banner.avif") no-repeat center center fixed; 
+    background-size: cover; /* L'image couvre toute la zone visible */
+}
+
+header, main, footer {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 1rem;
 }
 
 .navbar {
@@ -73,7 +83,7 @@ body {
     background-color: rgba(55, 55, 55, 0.9);
     list-style: none;
     padding: 0.5rem 0;
-    min-width: 15em;
+    min-width: 15rem;
     border-radius: 4px;
     z-index: 1000;
     opacity: 0;
@@ -103,7 +113,7 @@ body {
 .navbar nav ul li .dropdown li a:hover {
     transform: translateX(10px);
     color: #afafaf;
-    border-radius: 1em;
+    border-radius: 1rem;
     transition: color 0.5s;
 }
 
@@ -112,18 +122,20 @@ body {
 }
 
 /* Bannière */
-.banner {
-    position: relative;
+/*.banner {
+    position: fixed; /* La bannière reste fixe à l’écran 
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 100vh;
+    height: 100vh; /* Prend toute la hauteur de la fenêtre 
     overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: white;
-}
+    z-index: -1; /* Derrière le contenu 
+    background: url('img/banner.jpeg') no-repeat center center; 
+    background-size: cover; /* L’image couvre toute la zone 
+}*/
 
-.banner-image {
+
+/*.banner-image {
     position: absolute;
     top: 0;
     left: 0;
@@ -132,13 +144,12 @@ body {
     object-fit: cover;
     z-index: 1;
     filter: brightness(0.8);
-}
+}*/
 
 .accueil {
     position: relative;
-    z-index: 2;
     text-align: center;
-    color:white;
+
     padding : 10%;
 }
 
@@ -149,7 +160,7 @@ body {
 }
 
 .accueil p {
-    padding-left: 5em;
+    padding-left: 5rem;
     text-shadow: 0 4px 15px rgba(0,0,0,0.3);
     padding-right: 5em;
     font-size: 1.1rem;
@@ -162,12 +173,13 @@ main {
 }
 
 .projets h1 {
-    padding-top: 1.5em;
+    padding-top: 1.5rem;
     font-size: 2.5rem;
     margin-bottom: 1rem;
 }
 
 .projets {
+    position: relative;
     padding: 2rem; /* Espace autour de la section projets */
     text-align: center;
     height: 100vh;
@@ -184,7 +196,7 @@ main {
     background-color: #f4f4f4;
     border-radius: 8px; 
     padding: 1.5rem;
-    width: 50em; 
+    max-width: 50rem; 
     box-shadow: 0 2px 5px rgba(0,0,0,0.1); 
     text-align: left; 
 
@@ -193,7 +205,7 @@ main {
 .projets-card h2 {
     margin-bottom: 0.5rem;
     font-size: 1.5rem;
-    padding-bottom: 0.5em;
+    padding-bottom: 0.5rem;
 
 }
 
@@ -201,7 +213,7 @@ main {
     font-size: 1rem;
     line-height: 1.4;
     text-align: justify;
-    padding-bottom: 1em;
+    padding-bottom: 1rem;
 }
 
 .formations h1 {
@@ -211,6 +223,7 @@ main {
 }
 
 .formations {
+    position: relative;
     padding: 2rem; /* Espace autour de la section projets */
     text-align: center;
     height: 70vh;
@@ -229,8 +242,8 @@ main {
     text-align: left;
     border-radius: 8px; 
     padding: 1.5rem;
-    max-width: 50em; 
-    min-height: 10em;
+    max-width: 50rem; 
+    min-height: 10rem;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1); 
 }
 
@@ -245,16 +258,17 @@ main {
     font-size: 1rem;
     line-height: 1.4;
     text-align: justify;
-    padding-bottom: 1em;
+    padding-bottom: 1rem;
 }
 
 .competences h1 {
-    padding-top: 1.5em;
+    padding-top: 1.5rem;
     font-size: 2.5rem;
     margin-bottom: 1rem;
 }
 
 .competences {
+    position: relative;
     padding: 2rem; /* Espace autour de la section projets */
     text-align: center;
 
@@ -273,14 +287,14 @@ main {
     text-align: left;
     border-radius: 8px; 
     padding: 1.5rem;
-    min-width: 10em; 
-    min-height: 10em;
+    min-width: 10rem; 
+    min-height: 10rem;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1); 
 }
 
 .competences-card img {
-    height: 5em;
-    width: 5em;
+    height: 5rem;
+    width: 5rem;
     display: block;
     margin: 0 auto;
 }
@@ -289,7 +303,7 @@ main {
     font-size: 1rem;
     line-height: 1.4;
     text-align: center;
-    margin-top: 0.5em;    list-style: none;
+    margin-top: 0.5rem;    list-style: none;
 }
 
 .competences-complementaire {
@@ -297,8 +311,8 @@ main {
     text-align: left;
     border-radius: 8px; 
     padding: 1.5rem;
-    min-width: 10em; 
-    min-height: 10em;
+    min-width: 10rem; 
+    min-height: 10rem;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     margin: 2rem auto 0 auto;
     width: 46rem;
@@ -354,4 +368,8 @@ main {
 .modal-content ul li:not(:last-child) a:hover {
     color: #505050;
     transition: color 0.3s;
+}
+
+.projets, .formations, .competences {
+    margin-bottom: 10%;
 }
